[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "andy4747-dsa"
version = "0.1.0"
authors = [{ name = "Angel Dhakal" }]
description = "Data Structures and Algorithms for learning and interview prep"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]


[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
